border-radius clipping fix

--- a/src/components/About/about.sass
+++ b/src/components/About/about.sass
@@ -38,6 +38,9 @@
 	height: 80vh
 	overflow: hidden
 	border-radius: 1000px
+	-webkit-border-radius: 1000px
+	-moz-border-radius: 1000px
+	transform: translateZ(0)
 	img
 		height: 100%
 
